load("@github_opensourceways_community_robot_lib//:image.bzl", "build_plugin_image", "push_image", "image_tags")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opensourceways/robot-gitee-cla
gazelle(name = "gazelle")

build_plugin_image(
    name = "image",
    plugin = "robot-gitee-cla",
)

push_image(
    name = "push_image",
    images = image_tags(
        target = ":image",
    ),
)
